# mimic

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  build.sh  build_cmake.sh  default.nix  mimic.sublime-project  shell.nix
mimic/: BUILD.bazel  mimic.cpp  mimic.hpp
src/: CMakeLists.txt  build_info.cpp.in  build_info.hpp  mimic.cpp  mimic.hpp  test.cpp  vars.cpp  vars.hpp  window.cpp  window.hpp
test/: BUILD.bazel  runs.cpp  test.cpp
tools/format/: BUILD.bazel
